--- a/reddit-client/tsconfig.json
+++ b/reddit-client/tsconfig.json
@@ -21,7 +21,7 @@
   "include": [
     "next-env.d.ts",
     "**/*.ts",
-    "**/*.tsx"
+    "**/*.tsx", "../reddit-server/src/utils/sendEmail.ts"
   ],
   "exclude": [
     "node_modules"
