--- a/reddit-server/package.json
+++ b/reddit-server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "REDDIT",
+  "name": "reddit-server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -7,7 +7,6 @@
     "watch": "tsc -w",
     "dev": "nodemon dist/index.js",
     "start": "node dist/index.js",
-    "start2": "ts-node src/index.ts",
     "create:migration": "mikro-orm migration:create"
   },
   "keywords": [],
@@ -29,12 +28,14 @@
     "@mikro-orm/core": "^4.3.0",
     "@mikro-orm/migrations": "^4.3.0",
     "@mikro-orm/postgresql": "^4.3.0",
+    "@types/nodemailer": "^6.4.0",
     "apollo-server-express": "^2.19.0",
     "argon2": "^0.27.0",
     "connect-redis": "^5.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "graphql": "^15.4.0",
+    "nodemailer": "^6.4.16",
     "pg": "^8.5.1",
     "redis": "^3.0.2",
     "type-graphql": "^1.1.1"
