--- a/reddit-server/package.json
+++ b/reddit-server/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "watch": "tsc -w",
     "dev": "nodemon dist/index.js",
-    "start": "node dist/index.js",
-    "create:migration": "mikro-orm migration:create"
+    "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
@@ -24,10 +23,6 @@
     "typescript": "^4.0.5"
   },
   "dependencies": {
-    "@mikro-orm/cli": "^4.3.0",
-    "@mikro-orm/core": "^4.3.0",
-    "@mikro-orm/migrations": "^4.3.0",
-    "@mikro-orm/postgresql": "^4.3.0",
     "@types/nodemailer": "^6.4.0",
     "apollo-server-express": "^2.19.0",
     "argon2": "^0.27.0",
@@ -42,12 +37,5 @@
     "type-graphql": "^1.1.1",
     "typeorm": "^0.2.29",
     "uuidv4": "^6.2.5"
-  },
-  "mikro-orm": {
-    "useTsNode": true,
-    "configPaths": [
-      "./src/mikro-orm.config.ts",
-      "./dist/mikro-orm.config.js"
-    ]
   }
 }
