--- a/web/package.json
+++ b/web/package.json
@@ -10,13 +10,14 @@
   },
   "dependencies": {
     "@chakra-ui/core": "^1.0.0-rc.8",
-    "@chakra-ui/icons": "^1.0.0-rc.8",
+    "@chakra-ui/icons": "^1.0.1",
     "@emotion/styled": "^10.0.27",
     "@urql/exchange-graphcache": "^3.1.11",
     "emotion-theming": "^10.0.27",
     "formik": "^2.2.5",
     "framer-motion": "^2.9.4",
     "graphql": "^15.4.0",
+    "graphql-tag": "^2.11.0",
     "next": "^9.1.7",
     "next-urql": "^2.1.1",
     "nodemailer": "^6.4.16",
@@ -30,7 +31,7 @@
     "@graphql-codegen/cli": "1.19.1",
     "@graphql-codegen/typescript": "1.17.11",
     "@graphql-codegen/typescript-operations": "1.17.9",
-    "@graphql-codegen/typescript-urql": "^2.0.2",
+    "@graphql-codegen/typescript-urql": "^2.0.3",
     "@types/cors": "^2.8.8",
     "@types/node": "^14.14.7",
     "typescript": "^4.0.5"
