--- a/server/.env.example
+++ b/server/.env.example
@@ -1,5 +1,7 @@
-DATABASE_URL=
-REDIS_URL=
-PORT=
-SECRET=
-CORS_ORIGIN=
+REDIS_URL=127.0.0.1:6379
+PORT=4000
+SESSION_SECRET=asdfasdgjklasdfhjk
+CORS_ORIGIN=http://localhost:3000
+DB_USERNAME=camlemessurier
+DB_PASSWORD=postgres
+DB_NAME=reddit
