--- a/web/package.json
+++ b/web/package.json
@@ -19,6 +19,7 @@
     "graphql": "^15.4.0",
     "graphql-tag": "^2.11.0",
     "next": "^9.1.7",
+    "next-apollo": "^5.0.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-is": "^17.0.1",
