--- a/web/package.json
+++ b/web/package.json
@@ -12,18 +12,18 @@
     "@apollo/client": "^3.3.3",
     "@chakra-ui/core": "^1.0.0-rc.8",
     "@chakra-ui/icons": "^1.0.1",
+    "@chakra-ui/react": "^1.0.2",
+    "@emotion/react": "^11.1.1",
     "@emotion/styled": "^10.0.27",
-    "emotion-theming": "^10.0.27",
     "formik": "^2.2.5",
-    "framer-motion": "^2.9.4",
+    "framer-motion": "^2.9.5",
     "graphql": "^15.4.0",
     "graphql-tag": "^2.11.0",
     "next": "^9.1.7",
     "next-apollo": "^5.0.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-is": "^17.0.1",
-    "urql": "^1.11.2"
+    "react-is": "^17.0.1"
   },
   "license": "MIT",
   "devDependencies": {
