--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "watch": "tsc -w",
     "build": "tsc",
-    "dev": "nodemon dist/index.js & tsc -w",
+    "dev": "nodemon dist/index.js",
     "start": "node dist/index.js"
   },
   "keywords": [],
