--- a/web/package.json
+++ b/web/package.json
@@ -15,6 +15,8 @@
     "@chakra-ui/react": "^1.0.2",
     "@emotion/react": "^11.1.1",
     "@emotion/styled": "^10.0.27",
+    "apollo-link": "^1.2.14",
+    "apollo-link-error": "^1.1.13",
     "formik": "^2.2.5",
     "framer-motion": "^2.9.5",
     "graphql": "^15.4.0",
@@ -23,7 +25,8 @@
     "next-apollo": "^5.0.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-is": "^17.0.1"
+    "react-is": "^17.0.1",
+    "yup": "^0.32.1"
   },
   "license": "MIT",
   "devDependencies": {
