--- a/web/package.json
+++ b/web/package.json
@@ -10,11 +10,12 @@
   },
   "dependencies": {
     "@apollo/client": "^3.3.3",
-    "@chakra-ui/core": "^1.0.0-rc.8",
+    "@babel/core": "^7.12.9",
     "@chakra-ui/icons": "^1.0.1",
     "@chakra-ui/react": "^1.0.2",
-    "@emotion/react": "^11.1.1",
-    "@emotion/styled": "^10.0.27",
+    "@chakra-ui/system": "^1.0.1",
+    "@emotion/react": "^11.1.2",
+    "@emotion/styled": "^11.0.0",
     "apollo-link": "^1.2.14",
     "apollo-link-error": "^1.1.13",
     "formik": "^2.2.5",
