--- a/web/package.json
+++ b/web/package.json
@@ -18,10 +18,13 @@
     "@emotion/styled": "^11.0.0",
     "apollo-link": "^1.2.14",
     "apollo-link-error": "^1.1.13",
+    "dayjs": "^1.9.7",
     "formik": "^2.2.5",
     "framer-motion": "^2.9.5",
     "graphql": "^15.4.0",
     "graphql-tag": "^2.11.0",
+    "luxon": "^1.25.0",
+    "moment": "^2.29.1",
     "next": "^9.1.7",
     "next-apollo": "^5.0.4",
     "react": "^16.12.0",
