--- a/server/package.json
+++ b/server/package.json
@@ -34,6 +34,8 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "graphql": "^15.4.0",
+    "helmet": "^4.2.0",
+    "http-redirect": "^0.0.7",
     "ioredis": "^4.19.2",
     "nodemailer": "^6.4.16",
     "pg": "^8.5.1",
