--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,59 +1,50 @@
 version: "3.4"
 
-x-common-variables: &common-variables
-  MYSQL_USER: sampleuser
-  MYSQL_PASSWORD: samplepassword
-  MYSQL_DATABASE: sampledb
-  REACT_APP_SERVER_PORT: 5000
-
 services:
-  mysql:
-    image: mysql:5.7
-    environment:
-      <<: *common-variables
-      MYSQL_HOST: localhost
-      MYSQL_ROOT_PASSWORD: root
-    ports:
-      - 3306:3306
-    restart: unless-stopped
-
   redis:
-    image: redis:latest
+      image: redis:latest
+      ports:
+        -  6397:6397
+      restart: unless-stopped
+
+  postgres:
+    image: postgres:latest
     environment:
-      <<: *common-variables
+      - POSTGRES_USER=user
+      - POSTGRES_DB=postgresdb
+      - POSTGRES_PASSWORD=password
     ports:
-      -  6393:6379
+      - 5432:5432
     restart: unless-stopped
+    volumes:
+      - ./db/data/postgres:/var/lib/postgres/data
 
   server:
     build: ./server
-    depends_on:
-      - mysql
-    expose:
-      - 5000
     environment:
-      <<: *common-variables
-      MYSQL_HOST_IP: mysql
+      - NODE_ENV=prod
     ports:
-      - 5000:5000
+      - 4000:4000
     volumes:
-      - ./server/src:/app/src
+      - ./server:/home/app/server
     links:
-      - mysql
-    command: yarn start
+      - postgres
+      - redis
+    command: yarn dev
+    depends_on:
+      - redis
+      - postgres
 
   web:
     build: ./web
-    environment:
-      <<: *common-variables
-      NODE_PATH: src
-    expose:
-      - 3000
     ports:
       - 3000:3000
     volumes:
-      - ./web/src:/app/src
-    stdin_open: true
+      - ./web:/home/app/web
     links:
       - server
-    command: yarn start
+    command: yarn dev
+    depends_on:
+      - redis
+      - postgres
+      - server
