--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
     "watch": "tsc -w",
     "build": "tsc",
     "dev": "nodemon dist/index.js",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "docker-dev": "typeorm migration:run && yarn dev"
   },
   "keywords": [],
   "author": "",
@@ -27,6 +28,7 @@
     "@types/nodemailer": "^6.4.0",
     "apollo-server-express": "^2.19.0",
     "argon2": "^0.27.0",
+    "class-validator": "^0.12.2",
     "connect-redis": "^5.0.0",
     "dataloader": "^2.0.0",
     "dotenv": "^8.2.0",
