--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
     "build": "tsc",
     "dev": "nodemon dist/index.js",
     "start": "node dist/index.js",
-    "docker-dev": "typeorm migration:run && yarn dev"
+    "docker-dev": "yarn dev"
   },
   "keywords": [],
   "author": "",
