--- a/web/package.json
+++ b/web/package.json
@@ -23,7 +23,7 @@
     "framer-motion": "^2.9.5",
     "graphql": "^15.4.0",
     "graphql-tag": "^2.11.0",
-    "luxon": "^1.25.0",
+    "js-cookie": "^2.2.1",
     "moment": "^2.29.1",
     "next": "^9.1.7",
     "next-apollo": "^5.0.4",
