--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "watch": "tsc -w",
     "build": "tsc",
     "dev": "nodemon dist/index.js",
-    "start": "node dist/index.js"
+    "start": "tsc && node dist/index.js"
 
   },
   "keywords": [],
